# openai-summarize-py

./: .gitignore  README.md  openai_summarize.py  pyproject.toml  requirements.txt  setup.py
openai_summarize/: __init__.py  openai_summarize.py
