[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openai_summarize"
version = "0.1.0"
authors = [
  { name="Kix Panganiban", email="kixpanganiban@protonmail.com" },
]
description = "A package for summarizing text using OpenAI"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kixpanganiban/openai_summarize_py"
"Bug Tracker" = "https://github.com/kixpanganiban/openai_summarize_py/issues"
